# MobileGLES-Wrapper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  attempt.txt  remaining.txt
.github/scripts/: fetch-trace-fixture-lfs.sh
.github/workflows/: Build.yml  Clear_code.yml  apk.yml  build-android.yml  build-linux.yml  build.yml  ci.yml  clean.yml  cmake-multi-platform.yml  main.yml  retrace-apk.yml  retrace.yml  test.yml
MobileGL/: Defines.h  Init.cpp
MobileGL/MG_Backend/: BackendObject.cpp  BackendObject.h
MobileGL/MG_Backend/DirectGLES/: BackendObject_DirectGLES.cpp  BackendObject_DirectGLES.h  DirectGLES.cpp  Managers.cpp  Managers.h  Utils.cpp  Utils.h
MobileGL/MG_Backend/DirectVulkan/: BackendObject_DirectVulkan.cpp  BackendObject_DirectVulkan.h  DirectVulkan.cpp  VulkanRendererConfig.h
MobileGL/MG_Impl/: GetProcAddress.cpp  Init.cpp
MobileGL/MG_Impl/CGLImpl/: CGLImpl.cpp  CGLImpl.h
MobileGL/MG_Impl/DyldInterpose/: DyldInterpose.cpp
MobileGL/MG_Impl/EGLImpl/: EGLImpl.cpp  EGLImpl.h
MobileGL/MG_Test/: SanityTest.cpp
MobileGL/MG_Util/: Types.h
MobileGlues-cpp/: CMakeLists.txt  Config.cpp  Config.h  Defines.h  GlobalObjects.cpp  GlobalObjects.h  Includes.h  README.md  Types.h  includes.h  init.cpp  main.cpp  version.h
MobileGlues-cpp/Backend/: BackendObject.cpp  BackendObject.h  BackendObjects.h  Init.cpp
MobileGlues-cpp/Backend/DirectGLES/: BackendObject_DirectGLES.cpp  BackendObject_DirectGLES.h  DirectGLES.cpp  DirectGLES.h  Managers.cpp  Managers.h  Utils.cpp  Utils.h
MobileGlues-cpp/EGL/Exporting/: Definitions.cpp
MobileGlues-cpp/GL/Exporting/: Definitions.cpp
MobileGlues-cpp/State/GLState/: Core.cpp  Core.h
MobileGlues-cpp/State/GLState/BufferState/: BufferObject.cpp  BufferObject.h  BufferState.h
MobileGlues-cpp/State/GLState/ErrorState/: Error.h
MobileGlues-cpp/State/GLState/FramebufferState/: FramebufferObject.h
MobileGlues-cpp/State/GLState/ProgramState/: ProgramObject.h
MobileGlues-cpp/State/GLState/RenderbufferState/: RenderbufferObject.h
MobileGlues-cpp/State/GLState/SamplerState/: SamplerObject.cpp  SamplerObject.h
MobileGlues-cpp/State/GLState/TextureState/: TextureObject.h  TextureState.h
MobileGlues-cpp/State/GLState/VertexArrayState/: VertexArrayObject.cpp  VertexArrayObject.h
MobileGlues-cpp/Util/Classifiers/: TextureEnumClassifier.cpp  TextureEnumClassifier.h
MobileGlues-cpp/Util/Converters/GLToMG/: TextureEnumConverter.cpp  TextureEnumConverter.h
MobileGlues-cpp/Util/Converters/GLToStr/: GLEnumConverter.cpp  GLEnumConverter.h
MobileGlues-cpp/Util/Converters/MGToGL/: BufferEnumConverter.cpp  BufferEnumConverter.h  FramebufferEnumConverter.cpp  FramebufferEnumConverter.h  ProgramEnumConverter.cpp  ProgramEnumConverter.h  TextureEnumConverter.cpp  TextureEnumConverter.h
MobileGlues-cpp/Util/Converters/MGToStr/: FramebufferEnumConverter.cpp  FramebufferEnumConverter.h  TextureEnumConverter.cpp  TextureEnumConverter.h
MobileGlues-cpp/Util/Debug/: Log.cpp  Log.h
MobileGlues-cpp/Util/Loaders/OpenGL/: Loader.cpp  Loader.h
MobileGlues-cpp/Util/Metrics/: TextureMetrics.cpp  TextureMetrics.h
MobileGlues-cpp/Util/Texture/: PixelStoreProcessor.cpp  PixelStoreProcessor.h  TextureFormatProcessor.cpp  TextureFormatProcessor.h
MobileGlues-cpp/config/: config.cpp  config.h  gpu_utils.cpp  settings.cpp  settings.h
MobileGlues-cpp/egl/: egl.cpp  egl.h  loader.cpp  loader.h
MobileGlues-cpp/gl/: ComputeShader.cpp  ComputeShader.h  buffer.cpp  buffer.h  drawing.cpp  drawing.h  envvars.cpp  envvars.h  framebuffer.cpp  framebuffer.h  getter.cpp  getter.h  gl.cpp  gl_native.cpp  gl_stub.cpp  glcorearb.h  glext.h  loader.h  log.cpp  log.h  mg.cpp  mg.h  multidraw.cpp  multidraw.h  pixel.cpp  pixel.h  program.cpp  program.h  random_string_gen.cpp  random_string_gen.h  shader.cpp  shader.h  state.cpp  state.h  texture.cpp  texture.h  vertexattrib.cpp  vertexattrib.h
MobileGlues-cpp/gl/ExtWrappers/: DSAWrapper.cpp  DSAWrapper.h  MultiBindWrapper.cpp  MultiBindWrapper.h
MobileGlues-cpp/gl/FSR1/: FSR1.cpp  FSR1.h  FSRShaderSource.h
MobileGlues-cpp/gl/backend/: BackendObject.h  Init.cpp
MobileGlues-cpp/gl/backend/DirectGLES/: BackendObject_DirectGLES.h  DirectGLES.h  Managers.h  Utils.h
MobileGlues-cpp/gl/glsl/: benchmark_parser.cpp  cache.cpp  cache.h  glsl_for_es.cpp  glsl_for_es.h
MobileGlues-cpp/gl/impl/: Exporting.cpp
MobileGlues-cpp/gl/impl/Buffer/: GL_Buffer.cpp  GL_Buffer.h
MobileGlues-cpp/gl/impl/Drawing/: GL_Drawing.cpp  GL_Drawing.h
MobileGlues-cpp/gl/impl/Framebuffer/: GL_Framebuffer.cpp  GL_Framebuffer.h
MobileGlues-cpp/gl/impl/Getter/: GL_Getter.cpp  GL_Getter.h
MobileGlues-cpp/gl/impl/Program/: GL_Program.cpp  GL_Program.h
MobileGlues-cpp/gl/impl/RenderState/: GL_RenderState.cpp  GL_RenderState.h
MobileGlues-cpp/gl/impl/Texture/: GL_Texture.cpp  GL_Texture.h
MobileGlues-cpp/gl/impl/VertexArray/: GL_VertexArray.cpp  GL_VertexArray.h
MobileGlues-cpp/gl/state/: Core.cpp  Core.h
MobileGlues-cpp/gles/: gles.h  loader.cpp  loader.h
MobileGlues-cpp/glx/: lookup.cpp  lookup.h
MobileGlues-cpp/include/: android_debug.h
MobileGlues-cpp/include/GL/: glcorearb.h  glext.h
MobileGlues-cpp/scripts/: update-source-file-header.py
MobileGlues-cpp/shaders/: multidraw_compute.comp
android-plugin/: TRACE_REPLAY.md  build.gradle  run-avd-ci.sh  run-trace-replay-cases-ci.sh  trace-replay-ci.sh
android-plugin/app/: build.gradle
android-plugin/app/src/trace/cpp/: CMakeLists.txt  apitrace_exit.hpp  apitrace_glproc_android.cpp  apitrace_glws_android.cpp  trace_replay_core.cpp  trace_replay_core.hpp  trace_replay_jni.cpp
android_stub/android/: log.h
tools/trace_replay/: CMakeLists.txt  GL4ES_TRACES.md  README.md  apitrace_glproc_mobilegl.cpp  apitrace_glws_egl.cpp  render_retrace_summary.mjs  run_android_retrace_local.py  run_macos_window_retrace_local.py  run_openra_replay.cmake  run_trace_case.cmake  trace_cases.json  trace_cases.py  trace_replay_cli.cpp
tools/trace_replay/skills/: mismatch-retrace-debugging.md  trace-fixture-authoring.md
(+50 files in other folders)
